--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "lint": "eslint app.js"
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -28,7 +28,6 @@
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-react": "^7.31.11",
     "nodemon": "^2.0.20"
   }
 }
