--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-react": "^7.31.11",
     "nodemon": "^2.0.20"
   }
 }
